--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -1366,4 +1366,10 @@
     <string name="keep_screen_on_never">Never</string>
     <string name="keep_screen_on_debugging">While USB debugging</string>
     <string name="keep_screen_on_charging">While charging</string>
+
+    <!-- LTO download data over wi-fi only -->
+    <string name="lto_download_data_wifi_only">GPS assisted data download</string>
+    <string name="lto_download_data_wifi_only_on">Over any networks</string>
+    <string name="lto_download_data_wifi_only_off">Only over Wi\u2011Fi networks</string>
+
 </resources>
