--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -1255,4 +1255,14 @@
     <!-- Message for dialog that shows when the user cannot add anymore fingers -->
     <string name="fingerprint_dialog_msg_max_fingers_reached">You can only enroll <xliff:g id="finger" example="5 fingerprints">%d</xliff:g> fingerprints. Delete an existing fingerprint.</string>
 
+    <!-- DNS Encryption -->
+    <string name="dns_enc_title">DNS encryption</string>
+    <string name="dns_enc_summary">Manage DNS encryption settings</string>
+    <string name="dns_enc_switch_title">Enable DNS encryption</string>
+    <string name="dns_enc_switch_summary">Toggle execution of local DNS encryption service</string>
+    <string name="dns_enc_cat_config_title">Configuration</string>
+    <string name="dns_enc_server_title">DNS resolver list</string>
+    <string name="dns_enc_server_summary">Select which server you want to use</string>
+    <string name="dns_enc_resolver_label">DNS resolver:&#160;</string>
+    <string name="dns_enc_resolvers_loading">Loading encrypted DNS resolver configuration...</string>
 </resources>
