Lock screen: Text and icon colors, (2/2)
Change-Id: Ia24222d0dec69131216c7f699a37a3a1cbeee4b8

--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -505,6 +505,8 @@
     <string name="dlg_reset_values_message">Reset values to default?</string>
     <string name="dlg_reset_android">Ok</string>
 
+    <string name="lock_screen_color_settings_summary">Customize colors</string>
+
     <!-- Privacy guard notification -->
     <string name="privacy_guard_notification_title">Notification</string>
     <string name="privacy_guard_notifiation_summary">Show a notification if privacy guard is active</string>
