--- a/res/xml/temasek_lockscreen.xml
+++ b/res/xml/temasek_lockscreen.xml
@@ -19,6 +19,13 @@
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
         android:title="@string/temasek_lockscreen_title">
 
+    
+    <PreferenceScreen
+        android:key="lock_screen_color_settings"
+        android:title="@string/colors_title"
+        android:summary="@string/lock_screen_color_settings_summary"
+        android:fragment="com.android.settings.darkkat.LockScreenColorSettings" />
+
     <!-- Weather -->
     <PreferenceCategory
         android:key="status_bar_show_weather_category"
