Add support for Wifi calling settings UI
Add support for user to select wifi calling settings.

Conflicts:
	res/values/strings.xml

Change-Id: I9fddb66e4b53208a4fb9c95454fe0daf5bc577e6
CRs-Fixed: 818899

Conflicts:
	res/values/cm_strings.xml

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -1269,4 +1269,6 @@
     <string name="dns_enc_server_summary">Select which server you want to use</string>
     <string name="dns_enc_resolver_label">DNS resolver:&#160;</string>
     <string name="dns_enc_resolvers_loading">Loading encrypted DNS resolver configuration...</string>
+
+    <string name="wifi_calling_settings_title">Wifi Calling Settings</string>
 </resources>
