RAM bar (2/2) ------------ I'm not author of this code, I believed this code is from Slim Roms, Modified by Cristiano Matos. Cherry pick from Pac KK 4.4 and port to cmRemiX Lollipop by Zion959 Credit to Cristiano Matos & Pac & Slim Roms Thank you all
Change-Id: I0f47445618a991e310923e2b85e180e921c57742

Conflicts:
	AndroidManifest.xml
	res/values/cr_strings.xml

--- a/res/xml/recents_panel_settings.xml
+++ b/res/xml/recents_panel_settings.xml
@@ -19,6 +19,7 @@
     android:title="@string/recents_panel_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">    
 
+  <!-- Clear Recent Button -->
     <PreferenceCategory
         android:key="recent_panel"
         android:title="@string/recents_panel_settings" >
@@ -59,5 +60,15 @@
             android:id="@+id/omniswitch"
             android:title="@string/omniswitch_settings_title"
             android:fragment="com.android.settings.temasek.OmniSwitch" />
+
+    <!-- RAM Bar -->
+    <PreferenceCategory
+            android:key="category_rambar"
+            android:title="@string/ram_bar_settings_category"/>
+
+    <PreferenceScreen
+            android:key="recents_ram_bar"
+            android:fragment="com.android.settings.temasek.RamBar"
+            android:title="@string/ram_bar" />
 
 </PreferenceScreen>
