[2/2] Navigation Bar Customization
credit team Vanir & team Bliss >>> Thank You

Check FB commit needed too

Includes @AlmightyMegadeth00 and AOKP's navbar tweaks, big thanks to them, all credits to them!

Includes @nuclearmistake 's fixes too
Thanks to Fusion ROM

Thanks to CM for navbar toggle and left in  landscape

Did some adapts to 5.1 by me

Features:
- Single, long, and double tap actions.
- Unlimited number of buttons.
- Custom Actions (Included + custom apps).
- Option to disable navbar spacer in its edge.
- Option to enable extra IME buttons (ime switcher + down up left right arrows).
- Option to modify longpress timeout.
- Custom height in portrait.
- Custom width in landscape.
- Multiple layout feature like dock pages (INCREDIBLE!).
- Navbar left in landscape included too.

Change-Id: Ie99f0074c1ed7699bfd44273f12f25c16e2bc542

Fixes

Change-Id: I8c0a8f013338b5e0cbbb0310f6fd5364c12e84a9
fixes

Change-Id: I0e3bb9280edcfcc1c5d5473fc20b45bb71d01926

--- a/res/xml/slim_sound_settings.xml
+++ b/res/xml/slim_sound_settings.xml
@@ -19,6 +19,18 @@
     android:title="@string/sound_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <!-- AudioFX -->
+    <PreferenceScreen
+        android:id="@+id/audiofx_settings"
+        android:title="@string/audiofx_settings_title"
+        android:summary="@string/audiofx_summary"
+        android:icon="@drawable/ic_equalizer" >
+          <intent
+             android:action="android.intent.action.MAIN"
+             android:targetClass="org.cyanogenmod.audiofx.ActivityMusic"
+             android:targetPackage="org.cyanogenmod.audiofx" />
+    </PreferenceScreen>
+
     <SwitchPreference
         android:key="camera_sounds"
         android:title="@string/camera_sounds_title"
