Settings: add Silent mode toggle (2/2)
Change-Id: Ide901e3e79f236b33669525021d53e8d9d46a1d2
Signed-off-by: Roman Birg <roman@cyngn.com>

--- a/res/xml/zen_mode_settings.xml
+++ b/res/xml/zen_mode_settings.xml
@@ -34,6 +34,13 @@
         android:switchTextOff=""
         android:switchTextOn="" />
 
+    <!-- None to Silent mode -->
+    <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+        android:key="none_is_silent"
+        android:title="@string/none_is_silent_title"
+        android:summary="@string/none_is_silent_summary"
+        settings:advanced="true" />
+
     <PreferenceCategory
         android:key="important"
         android:title="@string/zen_mode_important_category" >
