--- a/res/xml/temasek_settings.xml
+++ b/res/xml/temasek_settings.xml
@@ -31,11 +31,11 @@
          android:fragment="com.android.settings.temasek.AppSidebar"
          android:title="@string/app_sidebar_title"/>
 
-    <!-- Clock widget -->
+    <!-- Display -->
     <PreferenceScreen
-         android:key="lock_clock"
-         android:fragment="com.android.settings.temasek.LockClock"
-         android:title="@string/lock_clock_title" />
+         android:key="display_settings"
+         android:fragment="com.android.settings.temasek.DisplaySettings"
+         android:title="@string/display_settings_title" />
 
     <!-- Gesture anywhere -->
     <PreferenceScreen
