--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -96,8 +96,8 @@
     <string name="shortcut_action_media_previous">Music - previous track</string>
     <string name="shortcut_action_wake_device">Wake up device</string>
 
-    <string name="shortcut_action_longpress">Longpress:</string>
-    <string name="shortcut_action_select_action_longpress">Choose longpress action:</string>
+    <string name="shortcut_action_longpress">Long press:</string>
+    <string name="shortcut_action_select_action_longpress">Choose long press action:</string>
     <string name="shortcut_action_select_action">Choose action:</string>
     <string name="shortcut_action_select_action_newaction">Choose new action:</string>
     <string name="shortcut_action_reset">Reset</string>
@@ -351,19 +351,19 @@
     <string name="restart_systemui">Restart SystemUI</string>
 
     <!-- Temasek lockscreen -->
-    <string name="temasek_lockscreen_title">Lockscreen</string>
-    <string name="temasek_lockscreen_category">Lockscreen settings</string>
+    <string name="temasek_lockscreen_title">Lock screen</string>
+    <string name="temasek_lockscreen_category">Lock screen settings</string>
     <string name="temasek_lockscreen_shortcuts_category">Shortcuts</string>
     <!-- CM lockscreen shortcuts -->
     <string name="cm_lockscreen_shortcuts_title">Bottom corners shortcuts</string>
-    <string name="cm_lockscreen_shortcuts_summary">View or change custom bottom corners lockscreen shortcuts</string>
+    <string name="cm_lockscreen_shortcuts_summary">View or change custom bottom corners lock screen shortcuts</string>
     <!-- Slim lockscreen shortcuts -->
     <string name="lockscreen_shortcuts_title">Middle screen shortcuts</string>
-    <string name="lockscreen_shortcuts_summary">View or change custom middle screen lockscreen shortcuts</string>
+    <string name="lockscreen_shortcuts_summary">View or change custom middle screen lock screen shortcuts</string>
     <string name="lockscreen_shorcuts_launch_type_title">Shortcut click type</string>
     <string name="lockscreen_shortcuts_single_tap">Click</string>
     <string name="lockscreen_shortcuts_double_tap">Double tap</string>
-    <string name="lockscreen_shortcuts_longpress">Longpress</string>
+    <string name="lockscreen_shortcuts_longpress">Long press</string>
 
      <!-- QuickSettings: Smart Pulldown -->
     <string name="smart_pulldown_title">Smart pulldown</string>
@@ -496,7 +496,7 @@
     <string name="weather_show_timestamp_title">Show timestamp</string>
     <string name="weather_show_timestamp_summary">Enable to show the timestamp</string>
     <string name="weather_condition_icon_title">Condition icon</string>
-    <string name="weather_condition_icon_dlg_title">Coose an icon for displaying the weather condition</string>
+    <string name="weather_condition_icon_dlg_title">Choose an icon for displaying the weather condition</string>
     <string name="weather_condition_icon_monochrome_title">Monochrome</string>
     <string name="weather_condition_icon_colored_title">Colored</string>
     <string name="weather_condition_icon_vclouds_title">VClouds</string>
