move lock screen features to a different place
Conflicts:
	res/xml/security_settings_lockscreen.xml
	res/xml/security_settings_password.xml
	res/xml/security_settings_pattern.xml
	res/xml/security_settings_pin.xml
	res/xml/temasek_settings.xml

Change-Id: I7ace86f2a7fbef4c6ee72963173dbc279c041ca6

--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -351,7 +351,7 @@
     <string name="restart_systemui">Restart SystemUI</string>
 
     <!-- Temasek lockscreen -->
-    <string name="temasek_lockscreen_title">Lock screen</string>
+    <string name="temasek_lockscreen_title">Extras</string>
     <string name="temasek_lockscreen_category">Lock screen settings</string>
     <string name="temasek_lockscreen_shortcuts_category">Shortcuts</string>
     <!-- CM lockscreen shortcuts -->
