--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -505,7 +505,7 @@
     <string name="position_centered_title">Centered</string>
     <string name="hidden_title">Hidden</string>
     <string name="dlg_reset_values_message">Reset values to Android default?</string>
-    <string name="dlg_reset_android">Android</string>
+    <string name="dlg_reset_android">Ok</string>
 
     <!-- Privacy guard notification -->
     <string name="privacy_guard_notification_title">Notification</string>
