[WIP] Settings: Slim Recents [PS:6]
Change-Id: I4edb5e520d317bd68c6a5cd5f020caf78a58af66

--- a/res/xml/recents_panel_settings.xml
+++ b/res/xml/recents_panel_settings.xml
@@ -61,11 +61,17 @@
 
     </PreferenceCategory>
 
+    <!-- Slim recents -->
+    <PreferenceScreen
+        android:key="recent_panel"
+        android:fragment="com.android.settings.temasek.RecentPanel"
+        android:title="@string/recent_panel_category" />
+
     <!-- OmniSwitch -->
-        <PreferenceScreen
-            android:key="omniswitch"
-            android:id="@+id/omniswitch"
-            android:title="@string/omniswitch_settings_title"
-            android:fragment="com.android.settings.temasek.OmniSwitch" />
+    <PreferenceScreen
+        android:key="omniswitch"
+        android:id="@+id/omniswitch"
+        android:title="@string/omniswitch_settings_title"
+        android:fragment="com.android.settings.temasek.OmniSwitch" />
 
 </PreferenceScreen>
