--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -1063,7 +1063,9 @@
     <string name="overscroll_weight_summary">Select the weight of the scrollable objects</string>
 
     <!-- Recent panel -->
-    <string name="recent_panel_category">Slim Recent apps panel</string>
+    <string name="recent_panel_category">Slim recent apps panel</string>
+    <string name="show_running_tasks_title">Only show running apps</string>
+    <string name="recents_max_apps_title">Max allowed apps</string>
     <string name="recent_panel_scale_title">Size</string>
     <string name="recent_panel_scale_summary">Recent apps panel size in percent</string>
     <string name="recent_panel_100">100% (default)</string>
