--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -50,45 +50,46 @@
             android:key="navigation_bar"
             android:fragment="com.android.settings.cyanogenmod.NavBar"
             android:title="@string/navigation_bar_title"
-            android:dependency="enable_nav_bar" />
+            android:dependency="enable_nav_bar"
+            settings:advanced="true" />
+
+        <com.android.settings.cyanogenmod.SecureSettingSwitchPreference
+            android:key="search_panel_enabled"
+            android:title="@string/navigation_ring_enable_title"
+            android:defaultValue="true"
+            android:dependency="enable_nav_bar"
+            settings:advanced="true"/>
+
+        <PreferenceScreen
+            android:key="navigation_bar_ring"
+            android:fragment="com.android.settings.cyanogenmod.NavRing"
+            android:title="@string/navigation_ring_title"
+            android:dependency="search_panel_enabled"
+            settings:advanced="true"/>
 
         <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
             android:key="navigation_bar_menu_arrow_keys"
             android:title="@string/navigation_bar_arrow_keys_title"
             android:summary="@string/navigation_bar_arrow_keys_summary"
             android:defaultValue="false"
-            android:dependency="enable_nav_bar" />
+            android:dependency="enable_nav_bar"
+            settings:advanced="true"/>
 
         <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
             android:key="double_tap_sleep_navbar"
             android:title="@string/double_tap_sleep_nav_bar_title"
             android:summary="@string/double_tap_sleep_nav_bar_summary"
             android:defaultValue="false"
-            android:dependency="enable_nav_bar" />
+            android:dependency="enable_nav_bar"
+            settings:advanced="true"/>
 
         <ListPreference
             android:key="navigation_recents_long_press"
             android:dialogTitle="@string/navigation_bar_recents_title"
             android:title="@string/navigation_bar_recents_title"
             android:persistent="false"
-            android:dependency="enable_nav_bar" />
-
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:key="navigation_ring"
-        android:title="@string/navigation_ring_category" >
-
-        <com.android.settings.cyanogenmod.SecureSettingSwitchPreference
-            android:key="search_panel_enabled"
-            android:title="@string/navigation_ring_enable_title"
-            android:defaultValue="true" />
-
-        <PreferenceScreen
-            android:key="navigation_bar_ring"
-            android:fragment="com.android.settings.cyanogenmod.NavRing"
-            android:title="@string/navigation_ring_title"
-            android:dependency="search_panel_enabled" />
+            android:dependency="enable_nav_bar"
+            settings:advanced="true"/>
 
     </PreferenceCategory>
 
