Development: Add choices to 'Stay Awake' preference
* Per a request on Google+ for Google Engineers to add to M, the stay awake values
    can now be never, while usb debugging, and always.
* Keep them pixels awake.

Change-Id: I7f43200bab0f000dc7547cc3142c4cacda2f4732
Signed-off-by: Brandon McAnsh <brandon.mcansh@gmail.com>

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -1397,4 +1397,10 @@
         <![CDATA[<b>Total contributors:</b> <xliff:g id="total_contributors">%1$s</xliff:g><br/><br/>
                  <b>Total commits:</b> <xliff:g id="total_commits">%2$s</xliff:g><br/><br/>
                  <b>Last update:</b> <xliff:g id="date">%3$s</xliff:g>]]></string>
+
+    <!-- Keep screen on strings -->
+    <string name="keep_screen_on_never">Never</string>
+    <string name="keep_screen_on_debugging">While USB debugging</string>
+    <string name="keep_screen_on_charging">While charging</string>
+
 </resources>
