[2/2] Allow toggling animations off
Allows for toggling the animations that comes by default with Android L,
such as the open app animation, or other transition animations. This
effect is the same as when it goes into low power mode, except nothing
else is affected.

A change in framework/base is also required.

Change-Id: I98b542b4ba297b985464ce3fe76fee2c98ed61c1

--- a/res/xml/display.xml
+++ b/res/xml/display.xml
@@ -167,6 +167,12 @@
                 android:fragment="com.android.settings.temasek.ScreenAndAnimations"
                 android:title="@string/screen_and_animations_title"/>
 
+        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+                android:key="disable_transition_animations"
+                android:title="@string/disable_animations"
+                android:summary="@string/disable_animations_summary"
+                android:defaultValue="false" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
