Add Wi-Fi SSID display option to Adv Wifi settings (1/2)
This and the corresponding base commit applied again for the
recently changed signal cluster (AOSP-style) by CM.
This has no extra baggage like whitespace cleanup compared
to my first version back in May.

Change-Id: I3d27c8c6d151deb1c220de37a42fc7b550d5bb89

--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -251,6 +251,8 @@
     <string name="network_traffic_color_style">Color style</string>
     <string name="network_traffic_color_reset">Reset color</string>
     <string name="network_traffic_color_reset_message">Reset network traffic color to default?</string>
+    <string name="status_bar_show_wifi_ssid">Show Wi-Fi SSID</string>
+    <string name="status_bar_show_wifi_ssid_summary">Show the Wi-Fi SSID of a connected network in the status bar</string>
 
     <!-- Partition Info -->
     <string name="partition_info_title">View partition information</string>
