--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -12,8 +12,6 @@
     <string name="recents_panel_title">Recents panel</string>
     <string name="recents_panel_settings">Recents panel settings</string>
     <string name="screen_and_animations_title">Screen and animations</string>
-    <string name="display_settings">Display</string>
-    <string name="display_settings_title">Display settings</string>
     <string name="general_options_title">General</string>
 
     <!-- General strings -->
@@ -351,7 +349,7 @@
     <string name="restart_systemui">Restart SystemUI</string>
 
     <!-- Temasek lockscreen -->
-    <string name="temasek_lockscreen_title">Extras</string>
+    <string name="temasek_lockscreen_title">Tweaks</string>
     <string name="temasek_lockscreen_category">Lock screen settings</string>
     <string name="temasek_lockscreen_shortcuts_category">Shortcuts</string>
     <!-- CM lockscreen shortcuts -->
