move screen and animations to a better location
Change-Id: I2e5b32da3788aeee1c3ba52cd9d4e98e987ce2e8

--- a/res/xml/display.xml
+++ b/res/xml/display.xml
@@ -161,6 +161,12 @@
                 android:summary="@string/summary_font_size"
                 android:dialogTitle="@string/dialog_title_font_size" />
 
+        <!-- Screen and animations -->
+        <PreferenceScreen
+                android:key="screen_and_animations"
+                android:fragment="com.android.settings.temasek.ScreenAndAnimations"
+                android:title="@string/screen_and_animations_title"/>
+
     </PreferenceCategory>
 
     <PreferenceCategory
