--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -11,7 +11,7 @@
     <string name="temasek_settings_title">Spare parts</string>
     <string name="recents_panel_title">Recents panel</string>
     <string name="recents_panel_settings">Recents panel settings</string>
-    <string name="screen_and_animations_title">Animations</string>
+    <string name="screen_and_animations_title">Animations and tweaks</string>
     <string name="general_options_title">General</string>
 
     <!-- General strings -->
