--- a/res/xml/temasek_lock_screen_weather_settings.xml
+++ b/res/xml/temasek_lock_screen_weather_settings.xml
@@ -43,4 +43,20 @@
         android:title="@string/weather_colorize_all_icons_title"
         android:summary="@string/weather_colorize_all_icons_summary" />
 
+    <PreferenceCategory
+        android:key="weather_cat_colors"
+        android:title="@string/colors_title">
+
+         <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="weather_text_color"
+            android:title="@string/text_title"
+            android:defaultValue="0xffffffff" />
+
+         <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="weather_icon_color"
+            android:title="@string/icons_title"
+            android:defaultValue="0xffffffff" />
+
+	</PreferenceCategory>
+
 </PreferenceScreen>
