add <PreferenceCategory commit fixed: https://github.com/mtshima/android_packages_apps_Settings/commit/002b3a27796c81daee73b643718f5d33bebefdb9
Change-Id: I31fe1d76744a2753367ed7f71ad37074c856e3b6

--- a/res/xml/temasek_lock_screen_weather_settings.xml
+++ b/res/xml/temasek_lock_screen_weather_settings.xml
@@ -58,6 +58,8 @@
             android:defaultValue="0xffffffff" />
 
 	</PreferenceCategory>
+
+	<PreferenceCategory
         android:key="weather_cat_notifications"
         android:title="@string/weather_cat_notifications_title">
 
