--- a/res/xml/temasek_lockscreen.xml
+++ b/res/xml/temasek_lockscreen.xml
@@ -24,7 +24,7 @@
         android:key="lock_screen_color_settings"
         android:title="@string/colors_title"
         android:summary="@string/lock_screen_color_settings_summary"
-        android:fragment="com.android.settings.darkkat.LockScreenColorSettings" />
+        android:fragment="com.android.settings.temasek.LockScreenColorSettings" />
 
     <!-- Weather -->
     <PreferenceCategory
