--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -957,7 +957,7 @@
     <!-- Whether the keyguard will directly pass to pattern view -->
     <string name="lock_directly_show_pattern">Directly show pattern view</string>
     <!-- Whether the keyguard will directly pass to password enter -->
-    <string name="lock_directly_show_password">Directly show password enter</string>
+    <string name="lock_directly_show_password">Bypass lock screen swipe up</string>
 
     <!-- Screen security -->
     <string name="unlock_quick_unlock_control_title">Quick unlock</string>
