--- a/res/xml/security_settings_gesture.xml
+++ b/res/xml/security_settings_gesture.xml
@@ -44,11 +44,38 @@
             android:key="power_button_instantly_locks"
             android:title="@string/lockgesture_settings_enable_power_button_instantly_locks"/>
 
+        <SwitchPreference
+            android:key="power_button_instantly_locks"
+            android:title="@string/lockpattern_settings_enable_power_button_instantly_locks"/>
+
+        <com.android.settings.cyanogenmod.SecureSettingSwitchPreference
+            android:key="long_press_lock_icon_to_sleep"
+            android:title="@string/longpress_lock_icon_to_sleep_title"
+            android:summary="@string/longpress_lock_icon_to_sleep_summary" />
+
         <PreferenceScreen
             android:fragment="com.android.settings.OwnerInfoSettings"
             android:key="owner_info_settings"
             android:title="@string/owner_info_settings_title"
             android:summary="@string/owner_info_settings_summary"/>
+
+        <PreferenceScreen
+            android:key="lockscreen_temasek"
+            android:fragment="com.android.settings.temasek.LockScreenSettings"
+            android:title="@string/temasek_lockscreen_title" />
+
+        <!-- Lockscreen shortcuts -->
+        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_anywhere"
+            android:title="@string/double_tap_sleep_anywhere_title"
+            android:summary="@string/double_tap_sleep_anywhere_summary"
+            settings:advanced="true"/>
+
+        <com.android.settings.cyanogenmod.SecureSettingSwitchPreference
+            android:key="lockscreen_visualizer"
+            android:title="@string/lockscreen_visualizer_title"
+            android:defaultValue="true"
+            settings:advanced="true"/>
 
     </PreferenceCategory>
 
