fix cm_arrays.xml culprit: https://github.com/mtshima/android_packages_apps_Settings/commit/5c42c41b04d3872d5a32853a4d903715ddc1777d
Change-Id: Ib05620e23f18ad1391b68ec1df067bd8a697bb88

--- a/res/values/cm_arrays.xml
+++ b/res/values/cm_arrays.xml
@@ -532,6 +532,7 @@
         <item>SG</item>
         <item>BR</item>
         <item>IN</item>
+    </string-array>
 
     <string-array name="keep_screen_on_titles" translatable="false">
         <item>@string/keep_screen_on_never</item>
