--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -66,6 +66,7 @@
     <string name="slim_shortcut_picker">Slim Actions</string>
     <string name="shortcut_action_none">None</string>
     <string name="shortcut_action_app">Custom app</string>
+    <string name="shortcut_action_expanded_desktop">Expanded desktop</string>
     <string name="shortcut_action_home">Home</string>
     <string name="shortcut_action_back">Back</string>
     <string name="shortcut_action_kill">Kill app</string>
