--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -752,6 +752,7 @@
     <string name="doze_auto_brightness_title">Auto brightness</string>
     <string name="doze_auto_brightness_summary">Adjusts the brightness of the screen to take into account the ambient light of your surroundings</string>
 
+    <string name="zero_second">0 s</string>
     <string name="twohundred_ms">200 ms</string>
     <string name="fivehundred_ms">500 ms</string>
     <string name="one_second">1 s</string>
