change zero sec pulse duration to half sec

--- a/res/values/cr_arrays.xml
+++ b/res/values/cr_arrays.xml
@@ -648,7 +648,7 @@
     </string-array>
 
     <string-array name="doze_pulse_duration_visible_entries" translatable="false">
-        <item>@string/zero_second</item>
+        <item>@string/fivehundred_ms</item>
         <item>@string/one_second</item>
         <item>@string/onehalf_second</item>
         <item>@string/two_second</item>
@@ -661,7 +661,7 @@
     </string-array>
 
     <string-array name="doze_pulse_duration_visible_values" translatable="false">
-        <item>0</item>
+        <item>500</item>
         <item>1000</item>
         <item>1500</item>
         <item>2000</item>
