--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -1122,11 +1122,11 @@
     <string name="notification_media_bg_mode_title">Colorize the media background</string>
     <string name="notification_app_icon_bg_mode_title">Colorize the app icon background</string>
     <string name="notification_app_icon_color_mode_title">Colorize app icon</string>
-    <string name="notification_bg_guts_color_title">Background on long press</string>
+    <string name="notification_bg_guts_color_title">Background on longpress</string>
     <string name="notification_app_icon_bg_color_title">App icon background</string>
     <string name="notification_color_mode_never_title">Never</string>
-    <string name="notification_icon_color_mode_greyscale_title">If the icon is a grayscale icon</string>
-    <string name="notification_bg_color_mode_no_color_title">If the notification doesn\'t include its own color</string>
+    <string name="notification_icon_color_mode_greyscale_title">If the icon is an greyscale icon</string>
+    <string name="notification_bg_color_mode_no_color_title">If the notification doesn\`t include an own color</string>
     <string name="notification_color_mode_always_title">Always</string>
 
 </resources>
