--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -927,7 +927,7 @@
     <string name="theme_settings_title">TRDS</string>
     <string name="theme_auto_mode_title">Switch theme</string>
     <string name="theme_override_custom_colors_title">Override custom colors</string>
-    <string name="theme_override_custom_colors_summary">Override custom notification and qs colors</string>
+    <string name="theme_override_custom_colors_summary">Override custom QS colors</string>
     <string name="theme_auto_mode_off">Manual</string>
     <string name="theme_auto_mode_lightsensor">On light condition change (experimental)</string>
     <string name="theme_auto_mode_twilight">On daytime</string>
