--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -987,6 +987,7 @@
     <string name="qs_category_title">Quick Settings panel</string>
 
     <string name="qs_brightness_slider_title">Show brightness slider</string>
+    <string name="qs_volume_slider_title">Show media volume slider</string>
 
 
     <!-- Quick Settings -->
