--- a/res/xml/notification_drawer_settings.xml
+++ b/res/xml/notification_drawer_settings.xml
@@ -90,6 +90,11 @@
             android:defaultValue="false" />
 
         <com.android.settings.cyanogenmod.SecureSettingSwitchPreference
+            android:key="qs_show_volume_slider"
+            android:title="@string/qs_volume_slider_title"
+            android:defaultValue="false"/>
+
+        <com.android.settings.cyanogenmod.SecureSettingSwitchPreference
             android:key="qs_location_advanced"
             android:title="@string/qs_advanced_location_title"
             android:summary="@string/qs_advanced_location_summary"
