--- a/res/xml/display.xml
+++ b/res/xml/display.xml
@@ -91,24 +91,24 @@
                 settings:advanced="false"/>
 
         <!-- Lift to wake -->
-        <SwitchPreference
+        <!--<SwitchPreference
                 android:key="lift_to_wake"
                 android:title="@string/lift_to_wake_title"
-                android:persistent="false" />
+                android:persistent="false" />-->
 
         <!-- Double tap to wake -->
-        <SwitchPreference
+        <!--<SwitchPreference
                 android:key="double_tap_wake_gesture"
                 android:title="@string/double_tap_to_wake_title"
-                android:summary="@string/double_tap_to_wake_summary" />
+                android:summary="@string/double_tap_to_wake_summary" />-->
 
         <!-- Prevent accidental wake-up -->
-        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+        <!--<com.android.settings.cyanogenmod.SystemSettingSwitchPreference
                 android:key="proximity_on_wake"
                 android:title="@string/proximity_wake_title"
                 android:summary="@string/proximity_wake_summary"
                 android:defaultValue="true"
-                settings:advanced="true"/>
+                settings:advanced="true"/>-->
 
         <!-- Wake on plug -->
         <SwitchPreference
