Revert "Development: Add choices to 'Stay Awake' preference"
This reverts commit 5c42c41b04d3872d5a32853a4d903715ddc1777d.

--- a/res/xml/development_prefs.xml
+++ b/res/xml/development_prefs.xml
@@ -43,12 +43,10 @@
                 android:targetClass="com.android.settings.SetFullBackupPassword" />
     </PreferenceScreen>
 
-    <ListPreference
-        android:key="keep_screen_on_list"
+    <SwitchPreference
+        android:key="keep_screen_on"
         android:title="@string/keep_screen_on"
-        android:dialogTitle="@string/keep_screen_on"
-        android:entries="@array/keep_screen_on_titles"
-        android:entryValues="@array/keep_screen_on_values" />
+        android:summary="@string/keep_screen_on_summary"/>
 
     <ListPreference
         android:key="hdcp_checking"
