--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -1026,6 +1026,7 @@
     <string name="qs_tile_lockscreen">Lock screen</string>
     <string name="qs_tile_lte">LTE</string>
     <string name="qs_tile_visualizer" translatable="false">AudioFX</string>
+    <string name="qs_tile_volume_panel">Volume panel</string>
     <string name="qs_tile_screen_timeout">Screen timeout</string>
     <string name="qs_tile_trds">TRDS</string>
 
