--- a/res/xml/display.xml
+++ b/res/xml/display.xml
@@ -103,11 +103,10 @@
                 android:summary="@string/double_tap_to_wake_summary" />
 
         <!-- Prevent accidental wake-up -->
-        <com.android.settings.cyanogenmod.SystemSettingSwitchPreference
+        <SwitchPreference
                 android:key="proximity_on_wake"
                 android:title="@string/proximity_wake_title"
                 android:summary="@string/proximity_wake_summary"
-                android:defaultValue="true"
                 settings:advanced="true"/>
 
         <!-- Wake on plug -->
