--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -35,6 +35,12 @@
             android:defaultValue="0xffffff" />
 
         <ListPreference
+            android:key="font_style"
+            android:entries="@array/clock_font_style_entries"
+            android:entryValues="@array/clock_font_style_values"
+            android:title="@string/clock_font_style_title" />
+
+        <ListPreference
             android:key="status_bar_am_pm"
             android:title="@string/status_bar_am_pm_title"
             android:dialogTitle="@string/status_bar_am_pm_title"
