--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -47,7 +47,7 @@
 
     <!-- Temasek Extra Info -->
     <string name="temaextrainfo">Extra information</string>
-    <string name="temaextrainfo_summary">Display extra info for cpu, display, etc</string>
+    <string name="temaextrainfo_summary">Display extra info for cpu, display, etc.</string>
 
     <!-- Viper4Android -->
     <string name="viper_title">Viper4Android</string>
